--- a/DSSCDB/templates/DSSCDB/base.html
+++ b/DSSCDB/templates/DSSCDB/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load bootstrap3 %}
 
 <!DOCTYPE html>
 <html>
@@ -24,7 +25,13 @@
 <body>
 <main>
   {% include "DSSCDB/menu.html" %}
-
+    <div class="container">
+        <div class="row">
+            <div class="col-md-7 col-lg-7">
+                {% bootstrap_messages %}
+            </div>
+        </div>
+    </div>
   {% block content %}
   {% endblock %}
 </main>
