--- a/DSSCDB/templates/DSSCDB/menu.html
+++ b/DSSCDB/templates/DSSCDB/menu.html
@@ -32,15 +32,16 @@
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {% if not request.user.is_authenticated %}
-          <li><a href="{% url 'login' %}">Log in</a></li>
-          <li><a href="{% url 'signup' %}">Sign up</a></li>
+          <li><a href="{% url 'user:login' %}">Log in</a></li>
+          <li><a href="{% url 'user:signup' %}">Sign up</a></li>
         {% else %}
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
              aria-expanded="false">{{ request.user.first_name }} {{ request.user.last_name }} <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">My profile</a></li>
-            <li><a href="{% url 'logout' %}">Log out</a></li>
+            <li><a href="{% url 'user:change-password' %}">Change password</a></li>
+            <li><a href="{% url 'user:logout' %}">Log out</a></li>
           </ul>
         </li>
         {% endif %}
