--- a/usermanagement/templates/usermanagement/change_password.html
+++ b/usermanagement/templates/usermanagement/change_password.html
@@ -1,19 +1,20 @@
 {% extends 'DSSCDB/base.html' %}
 {% load bootstrap3 %}
+{% load static %}
 
 {% block content %}
   <div class="container">
     <div class="row">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">Sign up</h3>
+          <h3 class="panel-title">Change password</h3>
         </div>
         <div class="panel-body">
-          <form action="{% url 'user:signup' %}" method="post" class="form">
+          <form action="{% url 'user:change-password' %}" method="post" class="form">
             {% csrf_token %}
             {% bootstrap_form form %}
             {% buttons %}
-              <button type="submit" class="btn btn-primary">Sign up</button>
+              <button type="submit" class="btn btn-primary">Change</button>
             {% endbuttons %}
           </form>
         </div>
