--- a/usermanagement/templates/usermanagement/login.html
+++ b/usermanagement/templates/usermanagement/login.html
@@ -1,5 +1,10 @@
 {% extends 'DSSCDB/base.html' %}
 {% load bootstrap3 %}
+{% load static %}
+
+{% block styles %}
+  <link href="{% static 'usermanagement/css/usermanagement.css' %}" rel="stylesheet" type="text/css">
+{% endblock styles %}
 
 {% block content %}
   <div class="container">
@@ -9,15 +14,18 @@
           <h3 class="panel-title">Log in</h3>
         </div>
         <div class="panel-body">
-          <form action="{% url 'login' %}" method="post" class="form">
-            {% csrf_token %}
-            {% bootstrap_form form %}
-            {% buttons %}
-              <button type="submit" class="btn btn-primary">Log in</button>
-            {% endbuttons %}
-          </form>
-        </div>
+        <form action="{% url 'user:login' %}" method="post" class="form">
+          {% csrf_token %}
+          {% bootstrap_form form %}
+          <div class="form-group">
+            <a id="forgot-password-link" href="{% url 'user:forgot-password' %}">Forgot password?</a>
+          </div>
+          {% buttons %}
+            <button type="submit" class="btn btn-primary">Log in</button>
+          {% endbuttons %}
+        </form>
       </div>
     </div>
+  </div>
   </div>
 {% endblock content %}
