--- a/DSSCDB/templates/DSSCDB/index.html
+++ b/DSSCDB/templates/DSSCDB/index.html
@@ -3,12 +3,14 @@
 {% block content %}
   <div class="container">
     <div class="row">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">Title</h3>
-        </div>
-        <div class="panel-body">
-          Body
+      <div class="col-lg-10 col-lg-offset-1">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">About</h3>
+          </div>
+          <div class="panel-body">
+            {% lorem 3 p %}
+          </div>
         </div>
       </div>
     </div>
