--- a/DSSCDB/templates/DSSCDB/menu.html
+++ b/DSSCDB/templates/DSSCDB/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-default" id="main-menu">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Dye Sensitized Solar Cell Database</a>
+      <a class="navbar-brand" href="{% url 'index' %}">Dye Sensitized Solar Cell Database</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
