--- a/DSSCDB/templates/DSSCDB/menu.html
+++ b/DSSCDB/templates/DSSCDB/menu.html
@@ -37,7 +37,7 @@
         {% else %}
         <li class="dropdown">
           <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-             aria-expanded="false">{{ request.user.first_name }} {{ request.user.last_name }} <span class="caret"></span></a>
+             aria-expanded="false"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> {{ request.user.first_name }} {{ request.user.last_name }} <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">My profile</a></li>
             <li><a href="{% url 'user:change-password' %}">Change password</a></li>
