--- a/DSSCDB/static/DSSCDB/css/base.css
+++ b/DSSCDB/static/DSSCDB/css/base.css
@@ -29,9 +29,34 @@ html, body {
 }
 
 #main-menu {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 form .alert {
     display: none;
+}
+
+.submit-button {
+    margin-top: 10px;
+}
+
+@media (min-width: 768px) {
+    #main-menu {
+        margin-bottom: 25px;
+    }
+
+    .panel-content {
+        padding: 25px 40px 10px 40px;
+    }
+
+    .panel {
+        margin-bottom: 20px;
+    }
+
+}
+
+@media (min-width: 992px) {
+}
+
+@media (min-width: 1200px) {
 }
