--- a/usermanagement/templates/usermanagement/change_password.html
+++ b/usermanagement/templates/usermanagement/change_password.html
@@ -5,18 +5,20 @@
 {% block content %}
   <div class="container">
     <div class="row">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">Change password</h3>
-        </div>
-        <div class="panel-body">
-          <form action="{% url 'user:change-password' %}" method="post" class="form">
-            {% csrf_token %}
-            {% bootstrap_form form %}
-            {% buttons %}
-              <button type="submit" class="btn btn-primary">Change</button>
-            {% endbuttons %}
-          </form>
+      <div class="col-md-10 col-md-offset-1">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Change password</h3>
+          </div>
+          <div class="panel-body panel-content">
+            <form action="{% url 'user:change-password' %}" method="post" class="form">
+              {% csrf_token %}
+              {% bootstrap_form form %}
+              {% buttons %}
+                <button type="submit" class="btn btn-primary submit-button">Change</button>
+              {% endbuttons %}
+            </form>
+          </div>
         </div>
       </div>
     </div>
