--- a/usermanagement/templates/usermanagement/forgot_password.html
+++ b/usermanagement/templates/usermanagement/forgot_password.html
@@ -5,20 +5,22 @@
 {% block content %}
   <div class="container">
     <div class="row">
-      <div class="panel panel-default">
-        <div class="panel-heading">
-          <h3 class="panel-title">Forgot password</h3>
+      <div class="col-md-10 col-md-offset-1">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Forgot password</h3>
+          </div>
+          <div class="panel-body panel-content">
+            <form action="{% url 'user:forgot-password' %}" method="post" class="form">
+              {% csrf_token %}
+              {% bootstrap_form form %}
+              {% buttons %}
+                <button type="submit" class="btn btn-primary submit-button">Send email</button>
+              {% endbuttons %}
+            </form>
+          </div>
         </div>
-        <div class="panel-body">
-        <form action="{% url 'user:forgot-password' %}" method="post" class="form">
-          {% csrf_token %}
-          {% bootstrap_form form %}
-          {% buttons %}
-            <button type="submit" class="btn btn-primary">Send email</button>
-          {% endbuttons %}
-        </form>
       </div>
     </div>
-  </div>
   </div>
 {% endblock content %}
