--- a/dye/templates/dye/single-upload.html
+++ b/dye/templates/dye/single-upload.html
@@ -10,20 +10,20 @@
           <div class="panel-heading">
             <h3 class="panel-title">Log in</h3>
           </div>
-          <div class="panel-body">
+          <div class="panel-body panel-content">
             <p>{% lorem 1 p %}</p>
             <p>Article: {{ article }}</p>
             <p>Molecule:{{ molecule }}</p>
             <p>Spectum:{{ spectrum }}</p>
             <p>Performance:{{ performance }}</p>
-            <form action="{% url 'dye:upload' %}" method="post" class="form">
+            <form action="{% url 'dye:single-upload' %}" method="post" class="form">
               {% csrf_token %}
               {% bootstrap_form article_form %}
               {% bootstrap_form molecule_form %}
               {% bootstrap_form spectrum_form %}
               {% bootstrap_form performance_form %}
               {% buttons %}
-                <button type="submit" class="btn btn-primary">Upload</button>
+                <button type="submit" class="btn btn-primary submit-button">Upload</button>
               {% endbuttons %}
             </form>
           </div>
