--- a/DSSCDB/templates/DSSCDB/menu.html
+++ b/DSSCDB/templates/DSSCDB/menu.html
@@ -16,7 +16,7 @@
     </div>
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="{% url 'django.contrib.flatpages.views.flatpage' 'about' %}">About</a></li>
+        <li><a href="{% url 'flatpages:django.contrib.flatpages.views.flatpage' 'about' %}">About</a></li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
              aria-expanded="false">Browse <span class="caret"></span></a>
