--- a/dye/templates/dye/file-upload.html
+++ b/dye/templates/dye/file-upload.html
@@ -34,14 +34,9 @@
     <div class="col-md-offset-1 col-md-10">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">Log in</h3>
+          <h3 class="panel-title">Batch upload spreadsheet data </h3>
         </div>
         <div class="panel-body panel-content">
-          <p>{% lorem 1 p %}</p>
-          <p>Article: {{ article }}</p>
-          <p>Molecule:{{ molecule }}</p>
-          <p>Spectum:{{ spectrum }}</p>
-          <p>Performance:{{ performance }}</p>
           <form action="{% url 'dye:file-upload' %}" method="post" class="form" enctype="multipart/form-data">
             {% csrf_token %}
             {% bootstrap_form file_form %}
