--- a/dye/templates/dye/single-upload.html
+++ b/dye/templates/dye/single-upload.html
@@ -8,14 +8,9 @@
       <div class="col-lg-10 col-md-10">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Log in</h3>
+            <h3 class="panel-title">Upload single performance data</h3>
           </div>
           <div class="panel-body panel-content">
-            <p>{% lorem 1 p %}</p>
-            <p>Article: {{ article }}</p>
-            <p>Molecule:{{ molecule }}</p>
-            <p>Spectum:{{ spectrum }}</p>
-            <p>Performance:{{ performance }}</p>
             <form action="{% url 'dye:single-upload' %}" method="post" class="form">
               {% csrf_token %}
               {% bootstrap_form article_form %}
