--- a/dye/templates/dye/single-upload.html
+++ b/dye/templates/dye/single-upload.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="container">
     <div class="row">
-      <div class="col-lg-10 col-md-10">
+      <div class="col-md-10 col-md-offset-1">
         <div class="panel panel-default">
           <div class="panel-heading">
             <h3 class="panel-title">Upload single performance data</h3>
