--- a/dye/templates/dye/single-upload.html
+++ b/dye/templates/dye/single-upload.html
@@ -14,9 +14,42 @@
             <form action="{% url 'dye:single-upload' %}" method="post" class="form">
               {% csrf_token %}
               {% bootstrap_form article_form %}
-              {% bootstrap_form molecule_form %}
-              {% bootstrap_form spectrum_form %}
-              {% bootstrap_form performance_form %}
+              <div class="row">
+                <div class="col-md-6"> {% bootstrap_field molecule_form.smiles %} </div>
+                <div class="col-md-6"> {% bootstrap_field molecule_form.inchi %} </div>
+              </div>
+
+              {% bootstrap_field molecule_form.keywords %}
+              <div class="row">
+                <div class="col-md-6"> {% bootstrap_field spectrum_form.absorption_maxima %}</div>
+                <div class="col-md-6"> {% bootstrap_field spectrum_form.emission_maxima %}</div>
+              </div>
+              {% bootstrap_field spectrum_form.solvent %}
+              <div class="row">
+                <div class="col-md-3"> {% bootstrap_field performance_form.voc %}</div>
+                <div class="col-md-3"> {% bootstrap_field performance_form.jsc %}</div>
+                <div class="col-md-3"> {% bootstrap_field performance_form.ff %}</div>
+                <div class="col-md-3"> {% bootstrap_field performance_form.pce %}</div>
+              </div>
+              <div class="row">
+                <div class="col-md-12"> {% bootstrap_field performance_form.electrolyte %}</div>
+                <div class="col-md-6"> {% bootstrap_field performance_form.active_area %}</div>
+              </div>
+              <div class="row">
+                <div class="col-md-6"> {% bootstrap_field performance_form.co_adsorbent %}</div>
+                <div class="col-md-6"> {% bootstrap_field performance_form.co_sensitizer %}</div>
+              </div>
+              <div class="row">
+                <div class="col-md-6"> {% bootstrap_field performance_form.semiconductor %}</div>
+                <div class="col-md-6"> {% bootstrap_field performance_form.dye_loading %}</div>
+                <div class="col-md-6"> {% bootstrap_field performance_form.exposure_time %}</div>
+                <div class="col-md-6"> {% bootstrap_field performance_form.solar_simulator %}</div>
+                <div class="col-md-6"> {% bootstrap_field performance_form.keywords %}</div>
+              </div>
+              <div class="row">
+                <div class="col-md-12"> {% bootstrap_field performance_form.comment %}</div>
+              </div>
+
               {% buttons %}
                 <button type="submit" class="btn btn-primary submit-button">Upload</button>
               {% endbuttons %}
