--- a/dye/templates/dye/file-upload.html
+++ b/dye/templates/dye/file-upload.html
@@ -6,7 +6,7 @@
   {% if errors %}
     <div class="container">
       <div class="row">
-        <div class="col-md-offset-1 col-md-10">
+        <div class="col-md-12">
           <div class="panel panel-default">
             <div class="panel-heading">
               <h3 class="panel-title">Errors</h3>
@@ -41,7 +41,7 @@
   {% endif %}
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-1 col-md-10">
+      <div class="col-md-12">
         <div class="panel panel-default">
           <div class="panel-heading">
             <h3 class="panel-title">Batch upload spreadsheet data </h3>
