--- a/dye/templates/dye/performance_list.html
+++ b/dye/templates/dye/performance_list.html
@@ -13,7 +13,7 @@
 {% block content %}
   <div class="container">
     <div class="row">
-      <div class="col-md-10 col-md-offset-1">
+      <div class="col-md-12">
         <div class="panel panel-default">
           <div class="panel-heading">
             <h3 class="panel-title">Performance data</h3>
@@ -41,7 +41,7 @@
                   <td class="vertical-align">{{ performance.jsc }}</td>
                   <td class="vertical-align">{{ performance.ff }}</td>
                   <td class="vertical-align">{{ performance.pce }}</td>
-                  <td class="vertical-align info-image-column"><a href="#"><img
+                  <td class="vertical-align info-image-column"><a href="{% url 'dye:performance-detail' performance.short_id %}"><img
                           src="{% static 'DSSCDB/images/info.svg' %}" class="info-image"></a></td>
                 </tr>
               {% endfor %}
