Update width of panels on all pages

--- a/DSSCDB/templates/DSSCDB/menu.html
+++ b/DSSCDB/templates/DSSCDB/menu.html
@@ -21,9 +21,9 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
              aria-expanded="false">Browse <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="{% url 'dye:list-performance' %}">Keyword</a></li>
-            <li><a href="{% url 'dye:list-performance' %}">Range</a></li>
-            <li><a href="{% url 'dye:list-performance' %}">Structure</a></li>
+            <li><a href="{% url 'dye:performance-list' %}">Keyword</a></li>
+            <li><a href="{% url 'dye:performance-list' %}">Range</a></li>
+            <li><a href="{% url 'dye:performance-list' %}">Structure</a></li>
           </ul>
         </li>
         <li class="dropdown">
