--- a/DSSCDB/templates/DSSCDB/base.html
+++ b/DSSCDB/templates/DSSCDB/base.html
@@ -27,7 +27,7 @@
   {% include "DSSCDB/menu.html" %}
   <div class="container">
     <div class="row">
-      <div class="col-md-10 col-md-offset-1">
+      <div class="col-md-12">
         {% bootstrap_messages %}
       </div>
     </div>
