--- a/DSSCDB/templates/DSSCDB/footer.html
+++ b/DSSCDB/templates/DSSCDB/footer.html
@@ -4,7 +4,7 @@
     <div class="footer" id="footer">
         <div class="container">
             <div class="row footer-content" >
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
+                <div class="col-lg-4 col-xs-6">
                     <h3> Lorem Ipsum </h3>
                     <ul>
                         <li> <a href="#"> Lorem Ipsum </a> </li>
@@ -13,25 +13,7 @@
                         <li> <a href="#"> Lorem Ipsum </a> </li>
                     </ul>
                 </div>
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                    <h3> Lorem Ipsum </h3>
-                    <ul>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                    </ul>
-                </div>
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
-                    <h3> Lorem Ipsum </h3>
-                    <ul>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                        <li> <a href="#"> Lorem Ipsum </a> </li>
-                    </ul>
-                </div>
-                <div class="col-lg-2  col-md-2 col-sm-4 col-xs-6">
+                <div class="col-lg-4 col-xs-6">
                     <h3> Lorem Ipsum </h3>
                     <ul>
                         <li> <a href="#"> Lorem Ipsum </a> </li>
