--- a/DSSCDB/templates/DSSCDB/menu.html
+++ b/DSSCDB/templates/DSSCDB/menu.html
@@ -53,6 +53,7 @@
                 <li class="dropdown-header">Profile</li>
               {% endif %}
               <li><a href="{% url 'user:profile' %}">My profile</a></li>
+              <li><a href="{% url 'dye:my-contributions' %}">My contributions</a></li>
               <li><a href="{% url 'user:change-password' %}">Change password</a></li>
               <li><a href="{% url 'user:logout' %}">Log out</a></li>
             </ul>
