--- a/dye/templates/dye/my_contributions.html
+++ b/dye/templates/dye/my_contributions.html
@@ -8,7 +8,7 @@
       <div class="col-md-10 col-md-offset-1">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Contribution approval</h3>
+            <h3 class="panel-title">My contributions</h3>
           </div>
           <div class="panel-body panel-content">
             {% include "./snippets/list_contributions.html" %}
