--- a/dye/templates/dye/performance_list.html
+++ b/dye/templates/dye/performance_list.html
@@ -19,87 +19,11 @@
             <h3 class="panel-title">Performance data</h3>
           </div>
           <div class="panel-body panel-content">
-            <table class="table table-bordered table-hover">
-              <thead>
-              <tr>
-                <th>Molecule</th>
-                <th>VOC</th>
-                <th>JSC</th>
-                <th>FF</th>
-                <th>PCE</th>
-                <th>Details</th>
-              </tr>
-              </thead>
-              <tbody>
-              {% for performance in performances %}
-                <tr>
-                  <td class="image-column">
-                    <img src="/media/{{ performance.molecule.image }}"
-                         alt="Responsive image" class="materialboxed img-thumbnail molecule-thumbnail">
-                  </td>
-                  <td class="vertical-align">{{ performance.voc }}</td>
-                  <td class="vertical-align">{{ performance.jsc }}</td>
-                  <td class="vertical-align">{{ performance.ff }}</td>
-                  <td class="vertical-align">{{ performance.pce }}</td>
-                  <td class="vertical-align info-image-column"><a
-                          href="{% url 'dye:performance-detail' performance.short_id %}"><img
-                          src="{% static 'DSSCDB/images/info.svg' %}" class="info-image"></a></td>
-                </tr>
-              {% endfor %}
-              </tbody>
-            </table>
-            <nav aria-label="Page navigation">
-
-              <ul class="pagination">
-                <li>
-                  {% if performances.has_previous %}
-                    <a href="?page={{ performances.previous_page_number }}" aria-label="Previous">
-                      <span aria-hidden="true">&laquo;</span>
-                    </a>
-                  {% else %}
-                    <a href="?page={{ performances.number }}" aria-label="Previous">
-                      <span aria-hidden="true">&laquo;</span>
-                    </a>
-                  {% endif %}
-                </li>
-                {% for page in pages %}
-                  {% if forloop.first and page > 1 %}
-                    <li>
-                      <a href="?page={{ page }}">...</a>
-                    </li>
-                  {% elif forloop.last and page < num_pages %}
-                    <li>
-                      <a href="?page={{ page }}">...</a>
-                    </li>
-                  {% else %}
-                    <li {% if page == performances.number %}class="active"{% endif %}>
-                      <a href="?page={{ page }}">{{ page }}</a>
-                    </li>
-                  {% endif %}
-
-                {% endfor %}
-                <li>
-                  {% if performances.has_next %}
-                    <a href="?page={{ performances.next_page_number }}" aria-label="Next">
-                      <span aria-hidden="true">&raquo;</span>
-                    </a>
-                  {% else %}
-                    <a href="?page={{ performances.number }}" aria-label="Next">
-                      <span aria-hidden="true">&raquo;</span>
-                    </a>
-                  {% endif %}
-                </li>
-              </ul>
-            </nav>
+            {% include 'dye/performance_list_table.html' %}
           </div>
         </div>
       </div>
     </div>
   </div>
-  <script>
-    $(function () {
-      $('.materialboxed').materialbox();
-    });
-  </script>
 {% endblock content %}
 
