Update style on flatpages

--- a/DSSCDB/templates/flatpages/default.html
+++ b/DSSCDB/templates/flatpages/default.html
@@ -4,7 +4,7 @@
 {% block content %}
   <div class="container">
     <div class="row">
-      <div class="col-md-offset-1 col-lg-offset-1 col-lg-10 col-md-10">
+      <div class="col-md-12">
         <div class="panel panel-default">
           <div class="panel-heading">
             <h3 class="panel-title">{{ flatpage.title }}</h3>
