--- a/dye/templates/dye/my_contributions.html
+++ b/dye/templates/dye/my_contributions.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="container">
     <div class="row">
-      <div class="col-md-10 col-md-offset-1">
+      <div class="col-md-12">
         <div class="panel panel-default">
           <div class="panel-heading">
             <h3 class="panel-title">My contributions</h3>
