--- a/dye/templates/dye/single_evaluation.html
+++ b/dye/templates/dye/single_evaluation.html
@@ -13,19 +13,31 @@
 {% endblock head-scripts %}
 {% block content %}
   <div class="container">
-    <form method="post" class="form" enctype="multipart/form-data">
-      {% csrf_token %}
-      {% bootstrap_form approval_form %}
-      {% buttons %}
-        <button type="submit" class="btn btn-primary submit-button">Upload</button>
-      {% endbuttons %}
-    </form>
-  </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Performance data</h3>
+          </div>
+          <div class="panel-body panel-content">
+            <form method="post" class="form" enctype="multipart/form-data">
+              {% csrf_token %}
+            <div class="row">
+              <div class="col-md-4">{% bootstrap_field approval_form.status %}</div>
+              <div class="col-md-4">
+                <label class="control-label">Confirm</label>{% bootstrap_field approval_form.confirm %}</div>
+            </div>
 
-  <script>
-      $(function () {
-          $('.materialboxed').materialbox();
-      });
-  </script>
+
+              {% buttons %}
+                <button type="submit" class="btn btn-primary submit-button">Set status</button>
+              {% endbuttons %}
+            </form>
+            {% include 'dye/performance_list_table.html' %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock content %}
 
