Add view for range search performances

--- a/DSSCDB/templates/DSSCDB/menu.html
+++ b/DSSCDB/templates/DSSCDB/menu.html
@@ -22,7 +22,7 @@
              aria-expanded="false">Browse <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="{% url 'dye:performance-list' %}">Keyword</a></li>
-            <li><a href="{% url 'dye:performance-list' %}">Range</a></li>
+            <li><a href="{% url 'dye:performance-range-search' %}">Range</a></li>
             <li><a href="{% url 'dye:performance-list' %}">Structure</a></li>
           </ul>
         </li>
