--- a/dye/templates/dye/performance_list.html
+++ b/dye/templates/dye/performance_list.html
@@ -1,6 +1,7 @@
 {% extends 'DSSCDB/base.html' %}
 {% load thumbnail %}
 {% load static %}
+{% load bootstrap3 %}
 
 {% block styles %}
   <link href="{% static 'DSSCDB/css/image_viewer.css' %}" rel="stylesheet" type="text/css">
@@ -19,7 +20,33 @@
             <h3 class="panel-title">Performance data</h3>
           </div>
           <div class="panel-body panel-content">
-            {% include 'dye/performance_list_table.html' %}
+            {% if range_form %}
+              <form action="" method="post" class="form" id="search-form">
+                {% csrf_token %}
+                <div class="row">
+                  <div class="col-md-6"> {% bootstrap_field range_form.min_voc %} </div>
+                  <div class="col-md-6"> {% bootstrap_field range_form.max_voc %} </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6"> {% bootstrap_field range_form.min_jsc %} </div>
+                  <div class="col-md-6"> {% bootstrap_field range_form.max_jsc %} </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6"> {% bootstrap_field range_form.min_ff %} </div>
+                  <div class="col-md-6"> {% bootstrap_field range_form.max_ff %} </div>
+                </div>
+                <div class="row">
+                  <div class="col-md-6"> {% bootstrap_field range_form.min_pce %} </div>
+                  <div class="col-md-6"> {% bootstrap_field range_form.max_pce %} </div>
+                </div>
+                {% buttons %}
+                  <button type="submit" class="btn btn-primary submit-button">Search</button>
+                {% endbuttons %}
+              </form>
+            {% endif %}
+            {% if performances %}
+              {% include 'dye/performance_list_table.html' %}
+            {% endif %}
           </div>
         </div>
       </div>
