--- a/DSSCDB/templates/DSSCDB/menu.html
+++ b/DSSCDB/templates/DSSCDB/menu.html
@@ -21,7 +21,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
              aria-expanded="false">Browse <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="{% url 'dye:performance-list' %}">Keyword</a></li>
+            <li><a href="{% url 'dye:performance-keyword-search' %}">Keyword</a></li>
             <li><a href="{% url 'dye:performance-range-search' %}">Range</a></li>
             <li><a href="{% url 'dye:performance-list' %}">Structure</a></li>
           </ul>
