Add javascript to make rows in table clickable

--- a/DSSCDB/templates/DSSCDB/base.html
+++ b/DSSCDB/templates/DSSCDB/base.html
@@ -38,6 +38,7 @@
 {% include 'DSSCDB/footer.html' %}
 {% block footer-scripts %}
 {% endblock footer-scripts %}
+<script type="text/javascript" src="{% static 'DSSCDB/javascript/utils.js' %}"></script>
 <script>
   $(function(){
     var $wrapper = $(".wrapper");
