--- a/DSSCDB/templates/DSSCDB/menu.html
+++ b/DSSCDB/templates/DSSCDB/menu.html
@@ -23,7 +23,7 @@
           <ul class="dropdown-menu">
             <li><a href="{% url 'dye:performance-keyword-search' %}">Keyword</a></li>
             <li><a href="{% url 'dye:performance-range-search' %}">Range</a></li>
-            <li><a href="{% url 'dye:performance-list' %}">Structure</a></li>
+            <li><a href="{% url 'dye:performance-range-search' %}">Structure</a></li>
           </ul>
         </li>
         <li class="dropdown">
