--- a/DSSCDB/templates/DSSCDB/base.html
+++ b/DSSCDB/templates/DSSCDB/base.html
@@ -11,9 +11,9 @@
 
   <link href="{% static 'DSSCDB/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css">
   <link href="{% static 'DSSCDB/css/base.css' %}" rel="stylesheet" type="text/css">
+  <link href="{% static 'DSSCDB/css/spinner.css' %}" rel="stylesheet" type="text/css">
   <script type="text/javascript" src="{% static 'DSSCDB/javascript/jquery.min.js' %}"></script>
   <script type="text/javascript" src="{% static 'DSSCDB/javascript/bootstrap.min.js' %}"></script>
-
 
   {% block styles %}
   {% endblock styles %}
