--- a/dye/templates/dye/evaluate_contributions.html
+++ b/dye/templates/dye/evaluate_contributions.html
@@ -11,7 +11,7 @@
             <h3 class="panel-title">Contribution approval</h3>
           </div>
           <div class="panel-body panel-content">
-            {% include "./snippets/list_contributions.html" %}
+            {% include "dye/snippets/list_contributions.html" %}
           </div>
         </div>
       </div>
