--- a/dye/templates/dye/single_evaluation.html
+++ b/dye/templates/dye/single_evaluation.html
@@ -20,19 +20,19 @@
             <h3 class="panel-title">Performance data</h3>
           </div>
           <div class="panel-body panel-content">
-            <form method="post" class="form" enctype="multipart/form-data">
-              {% csrf_token %}
-            <div class="row">
-              <div class="col-md-4">{% bootstrap_field approval_form.status %}</div>
-              <div class="col-md-4">
-                <label class="control-label">Confirm</label>{% bootstrap_field approval_form.confirm %}</div>
-            </div>
-
-
-              {% buttons %}
-                <button type="submit" class="btn btn-primary submit-button">Set status</button>
-              {% endbuttons %}
-            </form>
+            {% if approval_form %}
+              <form method="post" class="form" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="row">
+                  <div class="col-md-4">{% bootstrap_field approval_form.status %}</div>
+                  <div class="col-md-4">
+                    <label class="control-label">Confirm</label>{% bootstrap_field approval_form.confirm %}</div>
+                </div>
+                {% buttons %}
+                  <button type="submit" class="btn btn-primary submit-button">Set status</button>
+                {% endbuttons %}
+              </form>
+            {% endif %}
             {% include 'dye/performance_list_table.html' %}
           </div>
         </div>
