--- a/DSSCDB/templates/DSSCDB/contact-us.html
+++ b/DSSCDB/templates/DSSCDB/contact-us.html
@@ -13,7 +13,7 @@
       </div>
     </div>
     <div class="row">
-      <div class="panel panel-default">
+      <div class="panel panel-default full-page-panel">
         <div class="panel-heading">
           <h3 class="panel-title">Contact us</h3>
         </div>
