--- a/dye/templates/dye/single-upload.html
+++ b/dye/templates/dye/single-upload.html
@@ -6,7 +6,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="panel panel-default">
+        <div class="panel panel-default full-page-panel">
           <div class="panel-heading">
             <h3 class="panel-title">Upload single performance data</h3>
           </div>
