--- a/usermanagement/templates/usermanagement/login.html
+++ b/usermanagement/templates/usermanagement/login.html
@@ -10,7 +10,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="panel panel-default">
+        <div class="panel panel-default full-page-panel">
           <div class="panel-heading">
             <h3 class="panel-title">Log in</h3>
           </div>
