--- a/usermanagement/templates/usermanagement/signup.html
+++ b/usermanagement/templates/usermanagement/signup.html
@@ -5,7 +5,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <div class="panel panel-default">
+        <div class="panel panel-default full-page-panel">
           <div class="panel-heading">
             <h3 class="panel-title">Sign up</h3>
           </div>
