--- a/usermanagement/templates/usermanagement/profile.html
+++ b/usermanagement/templates/usermanagement/profile.html
@@ -20,15 +20,15 @@
                 <table class="table table-striped">
                   <tbody>
                   <tr>
-                    <th>Name:</th>
+                    <td><strong>Name:</strong></td>
                     <td>{{ user_profile.user.first_name }} {{ user_profile.user.last_name }}</td>
                   </tr>
                   <tr>
-                    <th>Email:</th>
+                    <td><strong>Email:</strong></td>
                     <td>{{ user_profile.user.email }}</td>
                   </tr>
                   <tr>
-                    <th>Organization:</th>
+                    <td><strong>Organization:</strong></td>
                     <td>{{ user_profile.organization }}</td>
                   </tr>
                   </tbody>
