--- a/dye/templates/dye/snippets/list_contributions.html
+++ b/dye/templates/dye/snippets/list_contributions.html
@@ -10,9 +10,9 @@
     <tbody>
     {% for contribution in contributions %}
     <tr class="clickable-row" data-href="{{ contribution.get_absolute_url }}">
-      <th><a
-          href="{% url "user:admin-users" %}">{{ contribution.user.first_name }} {{ contribution.user.last_name }}</a>
-      </th>
+      <td><strong><a
+          href="{% url "user:admin-users" %}">{{ contribution.user.first_name }} {{ contribution.user.last_name }}</a></strong>
+      </td>
       <td>{{ contribution.created|date:"j. F - H:i" }}</td>
       <td>{% if contribution.status == 1 %}Waiting{% elif contribution.status == 3 %}Denied{% endif %}</td>
     </tr>
